--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,7 +21,7 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
     - name: Run SUT
-      run:  java -jar ./artifacts/-P:profile=test &
+      run:  java -jar ./artifacts/app-ibank.jar -P:profile=test &
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
